@@ -39,6 +39,7 @@ MBDyn 1.X-Devel
 		- fix build with Intel's icpc
 		- fix parameter node use in elems (noted by Reinhard Resch)
 		- fix arpack counter for non terminal (Reinhard Resch)
+		- fix label alignment in strext (noted by Mirco Valentini)
 
 MBDyn 1.4.0
 	Enhancements:
